"Bug in UI , Alignment of image is not correct and all background is not white as per UX Design" - Resolved

--- a/src/assets/css/prdtDetails.less
+++ b/src/assets/css/prdtDetails.less
@@ -58,6 +58,7 @@
         img {
             flex: 9 0 auto;
             width:100%;
+            height: 100%;
         }
         &.holder{
             background: #E6D8D8;
